LU-11761 fld: limit FLD_QUERY retry between MDTs

In fld_client_rpc, the FLD_QUERY request between MDTs will be
retried in a loop only if the recovery is not aborted.

Change-Id: Ie83ebfdae2bd50c96a59a065f7f3c3dcfad04e42
Signed-off-by: Hongchao Zhang <hongchao@whamcloud.com>